fix for creation forms on mobile

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -990,6 +990,10 @@ h1.node-title {
     input[type="text"] {
       width: 100%;
     }
+
+    .lt480 & {
+      width: 100%;
+    }
   }
 
   .field-type-taxonomy-term-reference-form {
