--- a/sass/responsive.custom.scss
+++ b/sass/responsive.custom.scss
@@ -64,6 +64,16 @@
     top: auto;
     bottom: 0;
   }
+
+  .page-node-add #edit-additional-settings {
+    width: 100%;
+    position: static;
+  }
+
+  .page-node-add .field-type-taxonomy-term-reference-form {
+    width: 100%;
+    position: static;
+  }
 }
 
 
